# Gruenerator

./: .cursorrules  .dockerignore  .easignore  .editorconfig  .env.example  .gitignore  .lintstagedrc.json  .prettierignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  LICENSE.md  README.md  REDESIGN_SUMMARY.md  add_labor_enabled_column.sql  api_typecheck_output.txt  api_typecheck_output_v2.txt  api_typecheck_output_v3.txt  api_typecheck_output_v4.txt  ask-human-issue.md  c:\Users\morit\.cursor\mcp.json  commitlint.config.js  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  eslint.config.js  how 5128aa64  knip.json  nginx.conf  output.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release.config.js  response.json  shared_typecheck_output.txt  (+9 more)
.github/: dependabot.yml
.playwright-mcp/: generated-text-1756427161334.txt
Gruenerator/: LICENSE.md  package-lock.json
apps/desktop/src-tauri/: Cargo.toml  splashscreen.html  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs
components/: BaseForm.js
docker/: nginx.conf
documentation/: Dockerfile  README.md  crawler-config.js  crawler-config.json  docusaurus.config.ts  nginx.conf  package.json
gruenerator_backend/: .env  .env.backup  .gitignore  DEPLOY_REDIS_CHECKPOINTER.md  SECURITY_FIXES.md  add_labor_enabled_column.js  app.js  error.log~Stashed changes  fix_encrypted_data.sql  fix_encryption_targeted.sql  hocuspocusServer.mjs  image_selection_analysis.md  package-lock.json  package.json  routes.js  run_migration.js  server.js  server.mjs  test-mem0-integration.js  test_bundestag_api.js  test_bundestag_complete_flow.js  test_bundestag_flow.js  test_canva_integration.js  test_info_canvas.js  test_langgraph_search.mjs  test_qdrant_migration.js  test_redis_oauth.js  test_saved_texts_fix.js  test_social_media_examples.js  test_vector_planner.js  test_websearch.js  test_zitat_pure_canvas.js  yjsServer.mjs
gruenerator_frontend/: .gitignore  .releaserc.json  BASEFORM_MIGRATION.md  index.html  (+6 more)
(+4765 files in other folders)
