[package]
name = "gruenerator-desktop"
version = "1.0.1"
description = "Grünerator Desktop App"
authors = ["Grünerator Team"]
edition = "2021"

[lib]
name = "gruenerator_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "protocol-asset", "devtools"] }
tauri-plugin-opener = "2.5"
tauri-plugin-deep-link = "2"
tauri-plugin-shell = "2.3"
tauri-plugin-fs = "2.4"
tauri-plugin-dialog = "2.6"
tauri-plugin-notification = "2.3"
tauri-plugin-window-state = "2"
tauri-plugin-updater = "2.9"
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[profile.dev]
incremental = true
opt-level = 0

[profile.dev.package."*"]
opt-level = 2
